infra/k8s/ingress-quantai.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantai
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - quantai.quant.ecosystem
      secretName: quantai-tls
  rules:
    - host: quantai.quant.ecosystem
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quantai
                port:
                  number: 80
